--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,37 +1,44 @@
-<nav class="navbar is-dark" role="navigation" aria-label="main navigation">
-    <div class="navbar-brand">
-      <a class="navbar-item">
-        <img src="assets/images/xcash_logo.png" width="113" height="28" title="X-Cash Wallet">&nbsp;{{websiteName}}
+<nav class="navbar is-black" role="navigation" aria-label="main navigation">
+  <div class="navbar-brand">
+    <a class="navbar-item">
+      <img src="assets/images/xcash_logo.png" title="X-Cash Delegate">&nbsp;<span class="is-size-5">
+        Delegate {{websiteName}}</span>
+    </a>
+    <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="xnavbar">
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+    </a>
+  </div>
+  <div id="xnavbar" class="navbar-menu">
+    <div class="navbar-start">
+      <!--
+      <a class="navbar-item" routerLink="">
+        <span class="icon">
+          <fa-icon [icon]="faCircleInfo"></fa-icon>
+        </span>
+        &nbsp;Details
       </a>
-      <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="xnavbar">
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-      </a>
-    </div>
-    <div id="xnavbar" class="navbar-menu">
-      <div class="navbar-start">
-        <a class="navbar-item" routerLink="">
-          <span class="icon">
-            <fa-icon [icon]="faWallet"></fa-icon>
-          </span>
-          &nbsp;Wallets
+    -->
+      <div class="navbar-item has-dropdown is-hoverable">
+        <a title="Links" class="navbar-link is-arrowless">
+          Links
         </a>
-        <div class="navbar-item has-dropdown is-hoverable">
-          <a title="Currency" class="navbar-link is-arrowless">
-            About
+        <div class="navbar-dropdown">
+          <a title="xCash Block Explorer" class="navbar-item" href="https://explorer.xcash.network/Explorer" target="_blank">
+            xCash Block Explorer
           </a>
-          <div class="navbar-dropdown">
-              <a class="navbar-item">Version: {{versionInfo}}</a>
-            </div>
-          </div>
+        </div>
       </div>
-      <div class="navbar-end">
-        <a title="Settings" class="navbar-item" routerLink="settings">
-          <span class="icon">
-            <fa-icon [icon]="faGear"></fa-icon>
-          </span>
+      <div class="navbar-item has-dropdown is-hoverable">
+        <a title="About" class="navbar-link is-arrowless">
+          About
         </a>
+        <div class="navbar-dropdown">
+          <a class="navbar-item">Version: {{versionInfo}}</a>
+        </div>
       </div>
     </div>
-  </nav>
+    <div class="navbar-end"></div>
+  </div>
+</nav>
