--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,4 +1,4 @@
-/* You can add global styles to this file, and also import other style files *//
+/* You can add global styles to this file, and also import other style files */
 $navbar-breakpoint: 770px // Change the breakpoint from 1024px
 
 @import "bulma/sass/base/_all.sass"
@@ -35,3 +35,11 @@ $navbar-breakpoint: 770px // Change the breakpoint from 1024px
     transform: rotate(0deg)
   to
     transform: rotate(360deg)
+
+$fallback-color: #f5f5f5
+body
+  background-color: $fallback-color
+  background-image: url('assets/images/techbg.jpg')
+  background-size: cover
+  background-repeat: no-repeat
+  background-position: center center
