--- a/src/styles.sass
+++ b/src/styles.sass
@@ -38,6 +38,7 @@ $navbar-breakpoint: 770px // Change the breakpoint from 1024px
 
 $fallback-color: #f5f5f5
 body
+  height: 100vh
   background-color: $fallback-color
   background-image: url('assets/images/techbg.jpg')
   background-size: cover
