Update the config file.

--- a/src/app/pages/delegate-details/delegate-details.component.html
+++ b/src/app/pages/delegate-details/delegate-details.component.html
@@ -19,7 +19,7 @@
 						<div class="card-content is-fluid has-text-centered pt-0">
 							<div class="content">
 								<p class="has-text-weight-semibold">
-									This node is one of the xCash delegates that make up the xCash Public Network.  
+									This node is one of the xCash delegates that make up the xCash Public Network.
 									The network is governed by 50 delegates through a custom Delegated
 									Proof of Stake consensus designed on top of the Monero technology, the Delegated
 									Proof of Private Stake (DPOPS).
@@ -119,3 +119,6 @@
 		</div>
 	</section>
 </form>
+<div class="spinner-container" *ngIf="showSpinner">
+	<div class="spinner"></div>
+</div>
