Added parameter for delegate name.
Added parameter for delegate name and other minor changes.

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,30 +2,24 @@
   <div class="navbar-brand">
     <a class="navbar-item">
       <img src="assets/images/xcash_logo.png" title="X-Cash Delegate">&nbsp;<span class="is-size-5">
-        Delegate {{websiteName}}</span>
+        Delegate {{websiteName}}</span>&nbsp;&nbsp;Status:&nbsp;<span class={{texttype}}>{{ online }}</span>
     </a>
-    <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="xnavbar">
+    <a role="button" class="navbar-burger" [class.is-active]="isActive" (click)="toggleNavbar()" aria-label="menu"
+      aria-expanded="false">
       <span aria-hidden="true"></span>
       <span aria-hidden="true"></span>
       <span aria-hidden="true"></span>
     </a>
   </div>
-  <div id="xnavbar" class="navbar-menu">
+  <div id="xnavbar" class="navbar-menu" [class.is-active]="isActive">
     <div class="navbar-start">
-      <!--
-      <a class="navbar-item" routerLink="">
-        <span class="icon">
-          <fa-icon [icon]="faCircleInfo"></fa-icon>
-        </span>
-        &nbsp;Details
-      </a>
-    -->
       <div class="navbar-item has-dropdown is-hoverable">
         <a title="Links" class="navbar-link is-arrowless">
           Links
         </a>
-        <div class="navbar-dropdown">
-          <a title="xCash Block Explorer" class="navbar-item" href="https://explorer.xcash.network/Explorer" target="_blank">
+        <div class="navbar-dropdown" (click)="closeNavbar()">
+          <a title="xCash Block Explorer" class="navbar-item" href="https://explorer.xcash.network/Explorer"
+            target="_blank">
             xCash Block Explorer
           </a>
         </div>
@@ -34,11 +28,10 @@
         <a title="About" class="navbar-link is-arrowless">
           About
         </a>
-        <div class="navbar-dropdown">
+        <div class="navbar-dropdown"  (click)="closeNavbar()">
           <a class="navbar-item">Version: {{versionInfo}}</a>
         </div>
       </div>
     </div>
-    <div class="navbar-end"></div>
   </div>
 </nav>
