--- a/src/styles.sass
+++ b/src/styles.sass
@@ -38,9 +38,11 @@ $navbar-breakpoint: 770px // Change the breakpoint from 1024px
 
 $fallback-color: #f5f5f5
 body
-  height: 100vh
+  min-height: 100vh
   background-color: $fallback-color
   background-image: url('assets/images/techbg.jpg')
   background-size: cover
   background-repeat: no-repeat
   background-position: center center
+  @media screen and (max-width: 768px)
+    background-attachment: scroll
