--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,7 @@
 <nav class="navbar is-black" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a class="navbar-item">
-      <img src="assets/images/xcash_logo.png" title="X-Cash Delegate">&nbsp;<span class="is-size-5">
-        Delegate {{websiteName}}</span>&nbsp;&nbsp;Status:&nbsp;<span class={{texttype}}>{{ online }}</span>
+      <img src="assets/images/xcash_logo.png" width="113" height="28" title="X-Cash Delegate">
     </a>
     <a role="button" class="navbar-burger" [class.is-active]="isActive" (click)="toggleNavbar()" aria-label="menu"
       aria-expanded="false">
