Changed spacing and text size.

--- a/src/app/pages/delegate-details/delegate-details.component.html
+++ b/src/app/pages/delegate-details/delegate-details.component.html
@@ -1,7 +1,7 @@
-<section class="has-background-black py-1">
+<section class="has-background-black pt-0 pb-1">
 	<div class="columns">
 		<div class="column">
-			<h1 class="title has-text-white">&nbsp;
+			<h1 class="has-text-white is-size-4">&nbsp;
 				Delegate {{websiteName | uppercase}}&nbsp;&nbsp;Status:&nbsp;<span class={{texttype}}>{{online}}</span>
 			</h1>
 		</div>
